--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "typescript": "^4.1.6"
   },
   "engines": {
-    "node": "12.16.3";
+    "node": "12.16.3",
+    "npm": "6.14.4"
   },
   "scripts": {
     "start": "craco start",
