--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/node": "14.17.5",
     "@types/react": "^16.14.8",
     "@types/react-calendar": "^3.4.0",
     "@types/react-dom": "^16.9.13",
@@ -30,6 +31,10 @@
     "styled-components": "^5.3.1",
     "twin.macro": "^2.6.2",
     "typescript": "^4.1.6"
+  },
+  "engines": {
+    "node": "14.17.5",
+    "npm": "6.14.4"
   },
   "scripts": {
     "start": "craco start",
